--- a/gitblit/src/main/web/admin/console.html
+++ b/gitblit/src/main/web/admin/console.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="../static/css/console.min.css">
+    <link rel="stylesheet" href="/static/css/console.min.css">
 </head>
 
 <body>
     <div id="app" />
-    <script src="../static/js/console.min.js"></script>
+    <script src="/static/js/console.min.js"></script>
 </body>
 
 </html>
